Create API Boatman, Assistant, Instructor, Divemaster, Guide
